fixed alignment issue for everything on home page

--- a/frontend/src/pages/home/Home.css
+++ b/frontend/src/pages/home/Home.css
@@ -56,7 +56,7 @@ li img:active {
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-top: 5vh;
+    margin: 0 auto;
 }
 
 .clicked {
